# TimeSync

./: .gitignore  README.md  Task_Tracking_App_Prompt.txt  actions-status.md  build.ps1  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.cargo/: config.toml
.playwright-mcp/: page-2026-06-12T21-54-59-645Z.yml  page-2026-06-12T21-55-27-842Z.yml  page-2026-06-12T22-02-47-547Z.yml  page-2026-06-12T22-03-04-167Z.yml  page-2026-06-12T22-03-40-885Z.yml  page-2026-06-12T22-03-45-559Z.yml  page-2026-06-12T22-07-07-141Z.yml  page-2026-06-12T22-07-26-504Z.yml  page-2026-06-12T22-08-48-868Z.yml  page-2026-06-12T22-08-53-833Z.yml  page-2026-06-12T22-09-42-201Z.yml  page-2026-06-12T22-10-05-416Z.yml  page-2026-06-12T22-12-00-020Z.yml  page-2026-06-12T22-13-29-699Z.yml  page-2026-06-12T22-16-06-920Z.yml  page-2026-06-12T22-16-46-746Z.yml  page-2026-06-12T22-17-32-499Z.yml  page-2026-06-12T22-18-00-749Z.yml  page-2026-06-12T22-21-57-040Z.yml  page-2026-06-12T22-22-02-369Z.yml  page-2026-06-12T22-24-48-001Z.yml  page-2026-06-12T22-29-05-267Z.yml  page-2026-06-12T22-32-47-032Z.yml  page-2026-06-13T01-21-56-783Z.yml  page-2026-06-13T03-23-24-421Z.yml  page-2026-06-13T03-31-29-895Z.yml  page-2026-06-13T03-43-56-831Z.yml
scripts/: generate-icons.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/migrations/: 001_initial.sql  002_tasks_timer.sql  003_sync.sql  005_app_usage.sql  006_teams.sql
src-tauri/icons/: icon.icns
src-tauri/src/: app_tracker.rs  lib.rs  main.rs
src/lib/: api.ts  (+1 more)
(+72 files in other folders)
