[package]
name = "timesync"
version = "0.1.0"
description = "TimeSync - Time Tracking Application"
authors = ["you"]
edition = "2021"

[lib]
name = "timesync_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.16"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
